--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dragons-brew-cafe-apis",
   "version": "1.0.0",
   "description": "",
-  "main": "/api/cart.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
